RESULTS/AutoSpec/raw_results/out-4o-oopsla/045_0016/045_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/045_0016/045_merged.c:51:3: error: unterminated comment
   51 |   /* Invariant for the first while loop */;
      |   ^
